fix: correct projected sales/profit calculation for multi-unit inventory
- Add getStockInBaseUnits() helper in InventoryService that converts
  purchase quantity to base units using the product's unit definition
  conversion factor (e.g. 20 packs × 12 = 240 pieces)
- Fix mapToResponse(): projected sales now uses sellingPrice × base unit
  count instead of sellingPrice × purchase unit count (was mixing units)
- Fix getInventorySummary(): same correction for projectedTotalSales and
  totalInventoryCost fallback calculation
- Add productCategory field to InventoryResponse and map it in the
  frontend inventory list and detail pages
- Improve cost display in InventoryUnitPricing: when purchase unit differs
  from base unit, show both "Cost per pack" and "Cost per piece" clearly
- Add 2 new unit tests verifying projected sales with pack/piece purchase units

Fixes: projected sales showing suspiciously low values (sales looked like
profit), projected profit going deeply negative when purchasing in packs